--- a/css/front/layout.css
+++ b/css/front/layout.css
@@ -36,6 +36,7 @@
 #page3 .col-1 {
 	width:275px;
 	margin-right:40px;
+        height: 350px;
 }
 #page3 .col-2 {
 	width:275px;
@@ -56,4 +57,81 @@
 }
 #page6 .col-2 {
 	width:610px;
+}
+.TableBlue {
+	margin:0px;padding:0px;
+	width:100%;
+	box-shadow: 7px 7px 5px #888888;
+	border:1px solid #ffffff;
+	
+
+}.TableBlue table{
+	width:100%;
+	height:100%;
+	margin:0px;padding:0px;
+}.TableBlue tr:last-child td:last-child {
+	-moz-border-radius-bottomright:0px;
+	-webkit-border-bottom-right-radius:0px;
+	border-bottom-right-radius:0px;
+}
+.TableBlue table tr:first-child td:first-child {
+	-moz-border-radius-topleft:0px;
+	-webkit-border-top-left-radius:0px;
+	border-top-left-radius:0px;
+}
+.TableBlue table tr:first-child td:last-child {
+	-moz-border-radius-topright:0px;
+	-webkit-border-top-right-radius:0px;
+	border-top-right-radius:0px;
+}.TableBlue tr:last-child td:first-child{
+	-moz-border-radius-bottomleft:0px;
+	-webkit-border-bottom-left-radius:0px;
+	border-bottom-left-radius:0px;
+}.TableBlue tr:hover td{
+	
+}
+.TableBlue tr:nth-child(odd){ background-color:#a6d4e0; }
+.TableBlue tr:nth-child(even)    { background-color:#d5ecf2; }.TableBlue td{
+	vertical-align:middle;
+	border:1px solid #ffffff;
+	border-width:0px 1px 1px 0px;
+        font-size: 13px;
+	padding:5px;
+	color:#666666;
+}
+.TableBlue tr a{
+    color:#666666;
+}
+.TableBlue tr:last-child td{
+	border-width:0px 1px 0px 0px;
+}.TableBlue tr td:last-child{
+	border-width:0px 0px 1px 0px;
+}.TableBlue tr:last-child td:last-child{
+	border-width:0px 0px 0px 0px;
+}
+.TableBlue tr:first-child td{
+	background:-o-linear-gradient(bottom, #5cb7ce 5%, #5cb7ce 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #5cb7ce), color-stop(1, #5cb7ce) );
+	background:-moz-linear-gradient( center top, #5cb7ce 5%, #5cb7ce 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#5cb7ce", endColorstr="#5cb7ce");	background: -o-linear-gradient(top,#5cb7ce,5cb7ce);
+
+	background-color:#5cb7ce;
+	border:0px solid #ffffff;
+	text-align:center;
+	border-width:0px 0px 1px 1px;
+	font-size:14px;
+	font-weight:bold;
+	color:#ffffff;
+}
+.TableBlue tr:first-child:hover td{
+	background:-o-linear-gradient(bottom, #5cb7ce 5%, #5cb7ce 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #5cb7ce), color-stop(1, #5cb7ce) );
+	background:-moz-linear-gradient( center top, #5cb7ce 5%, #5cb7ce 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#5cb7ce", endColorstr="#5cb7ce");	background: -o-linear-gradient(top,#5cb7ce,5cb7ce);
+
+	background-color:#5cb7ce;
+}
+.TableBlue tr:first-child td:first-child{
+	border-width:0px 0px 1px 0px;
+}
+.TableBlue tr:first-child td:last-child{
+	border-width:0px 0px 1px 1px;
 }
