Remove underline of a href

--- a/css/admin/main.css
+++ b/css/admin/main.css
@@ -140,6 +140,10 @@ div.breadcrumbs
 	font-size: 0.9em;
 	padding: 5px 20px;
 }
+div.breadcrumbs a
+{
+        text-decoration: none;
+}
 
 div.breadcrumbs span
 {
