--- a/css/front/style.css
+++ b/css/front/style.css
@@ -83,7 +83,8 @@ p {
 	margin-bottom:18px
 }
 .p1 {
-	margin-bottom:8px
+	margin-bottom:12px;
+        overflow: hidden;
 }
 .p2 {
 	margin-bottom:15px
@@ -175,6 +176,7 @@ p {
 	border-radius:8px;
 	margin-top:2px;
 	margin-bottom:2px;
+        margin-right:10px;
 }
 .buttons a:hover {
 	cursor:pointer
