--- a/css/front/style.css
+++ b/css/front/style.css
@@ -10,7 +10,7 @@ html {
 	width:100%
 }
 body {
-	font-family:Arial, Helvetica, sans-serif;
+	font-family:Tahoma, Arial, Helvetica, sans-serif;
 	font-size:100%;
 	/*color:#808080;*/
 	color:#666666;
@@ -31,7 +31,7 @@ body {
 }
 .main {
 	width:980px;
-	padding:0;
+	padding:10px 0 0 0;
 	margin:0 auto;
 	font-size:0.875em;
 	line-height:1.428em
@@ -43,6 +43,7 @@ a {
 }
 a:hover {
 	text-decoration:none;
+        color: #F9DF1B;
 }
 .small{
     font-size: 12px;
@@ -189,38 +190,35 @@ header {
 	min-height:116px;
 }
 #page1 header {
-	min-height:196px
+	min-height:250px
 }
 h1 {
-	padding:24px 0 0 30px;
 	position:relative;
 	float:left;
 }
-h1.logo {
+h1.logo_th {
 	display:block;
-	/*width:266px;*/
-	width:350px;
-	height:110px;
-	font-size:40px;
+	margin-top: 20px;
+	width:480px;
+	height:135px;
+	font-size:44px;
 	font-weight:bold;
-	line-height:2em;
-	/*text-indent:-9999px;*/
-	/*background:url(../../images/front/logo.png) 0 0 no-repeat;*/
+	line-height:2.2em;
+	text-indent:-9999px;
+	background:url(../../images/front/gspa_logo_th.png) 0 0 no-repeat;
 	
 }
-h1 span{
-margin-top:20px;
-margin-left:20px;
-color:#FFE400;
-}
-h1 strong {
-        font-family: 'Conv_THSarabun', Arial, sans-serif;
-	display:inline-block;
-	font-size:22px;
-	line-height:1.5em;
-	color:#848484;
-	margin-top:-40px;
-	padding-left:110px;
+h1.logo_en {
+	display:block;
+	margin-top: 20px;
+	width:480px;
+	height:135px;
+	font-size:44px;
+	font-weight:bold;
+	line-height:2.2em;
+	text-indent:-9999px;
+	background:url(../../images/front/gspa_logo_en.png) 0 0 no-repeat;
+	
 }
 .logo2{
 float:right;
@@ -230,7 +228,7 @@ margin-top:50px;
 }
 /***** menu *****/
 .menu ul {
-	padding:0px 0 0 0;
+	padding:0px 0 10px 0;
 	float:left;
 }
 .menu ul li {
@@ -243,10 +241,10 @@ margin-top:50px;
 }
 .menu ul li a {
 	display:inline-block;
-        font-family: 'Conv_THSarabun', Arial, sans-serif;
-        font-size:30px;
-	line-height:1em;
-	padding:5px 15px 6px 15px;
+        font-family:Tahoma, Arial, Helvetica, sans-serif;
+        font-size:14px;
+	line-height:1.6em;
+	padding:5px 15px 10px 15px;
 	color:#fff;
 }
 /*.menu ul li a.active, .menu > ul > li > a:hover {*/
@@ -312,7 +310,7 @@ margin-top:50px;
 	width:850px;
 	height:470px;
 	padding:20px 0 0 130px;
-	margin-top:-50px;
+	margin-top:-90px;
 	position:relative;
 	overflow:hidden;
 	background:url(../../images/front/slider-bg.png) 0 0 no-repeat;
@@ -372,7 +370,7 @@ margin-top:50px;
 	background:url(../../images/front/pagin-4.png) 0 0 no-repeat
 }
 .banner {
-        font-family: 'Conv_THSarabun', Arial, sans-serif;
+        font-family:Tahoma, Arial, Helvetica, sans-serif;
 	width:280px;
 	height:346px;
 	padding:65px 10px 20px;
@@ -418,8 +416,8 @@ margin-top:50px;
 	font-weight:normal;
 }
 .button2 {
-        font-family: 'Conv_THSarabun', Arial, sans-serif;
-        font-size:20px;
+        font-family:Tahoma, Arial, Helvetica, sans-serif;
+        font-size:13px;
 	display:inline-block;
 	line-height:40px;
 	padding:0 25px;
@@ -440,10 +438,10 @@ footer .button2:hover {
 	background:url(../../images/front/content-bg.jpg) center -196px repeat-y #f4f5f7;
 }
 h2 {
-        font-family: 'Conv_THSarabun', Arial, sans-serif;
-	font-size:42px;
+        font-family:Tahoma, Arial, Helvetica, sans-serif;
+	font-size:28px;
 	line-height:2em;
-	font-weight:300;
+	font-weight:normal;
 	color:#151515;
 	text-align:center;
 	letter-spacing:-2px;
@@ -454,23 +452,24 @@ h2 strong {
 	margin-top:-43px
 }
 h3 {
-        font-family: 'Conv_THSarabun', Arial, sans-serif;
-	font-size:34px;
+        font-family:Tahoma, Arial, Helvetica, sans-serif;
+	font-size:16px;
 	line-height:1.5em;
-	font-weight:300;
+	font-weight:bold;
 	color:#080808;
         margin-bottom:3px;
 }
 h4{
-        font-family: 'Conv_THSarabun', Arial, sans-serif;
-        font-size:26px;
-        font-weight:bold;
+        font-family:Tahoma, Arial, Helvetica, sans-serif;
+        font-size:16px;
+        font-weight:normal;
         line-height:1em;
         margin-bottom:10px;
 }
 h6 {
-        font-family: 'Conv_THSarabun', Arial, sans-serif;
-        font-size:22px;
+        font-family:Tahoma, Arial, Helvetica, sans-serif;
+        font-size:14px;
+        font-weight:normal;
         line-height:1em;
 	color:#000;
 	margin-bottom:3px;
@@ -487,12 +486,12 @@ h6 {
 	border-bottom:1px solid #FFFFFF;
 }
 .button {
-        font-family: 'Conv_THSarabun', Arial, sans-serif;
+        font-family:Tahoma, Arial, Helvetica, sans-serif;
 	display:inline-block;
 	padding:0 24px;
 	margin-left:2px;
 	margin-bottom:2px;
-	font-size:22px;
+	font-size:13px;
 	line-height:38px;
 	color:#000;
 	border:1px solid #fff;
@@ -525,11 +524,10 @@ h6 {
 	background:url(../../images/front/li_yellow.png) 0 5px no-repeat;
 }
 .list-2 li a.item {
-        font-family: 'Conv_THSarabun', Arial, sans-serif;
+        font-family:Tahoma, Arial, Helvetica, sans-serif;
 	display:inline-block;
-	font-size:26px;
-        font-weight: bold;
-	line-height:0.8em;
+	font-size:16px;
+        font-weight: normal;
 	color:#080808;
 	margin-bottom:4px;
 }
@@ -707,7 +705,8 @@ font-style:italic;
 header form, header fieldset, header legend{margin:0; padding:0; border:none;}
 header legend{display:none;}
 header #search{
-        margin-top:10px;
+        margin-top:45px;
+        margin-right:5px;
 	display:block;
 	float:right;
 	}
@@ -721,7 +720,7 @@ header input{
 	color:#362C20;
 	background-color:#FFFFFF;
 	border:1px solid #999999;
-	font-family:Verdana, Arial, Helvetica, sans-serif;
+	font-family:Tahoma, Arial, Helvetica, sans-serif;
 	font-size:12px;
 
 	}
@@ -734,8 +733,8 @@ header input#go{
 	}
 header .lang{
 float:right;
-margin-right:10px;
-margin-top:15px;
+margin-right:5px;
+margin-top:5px;
 }
 div.breadcrumbs
 {
