--- a/css/front/style.css
+++ b/css/front/style.css
@@ -373,12 +373,12 @@ margin-top:50px;
         font-family:Tahoma, Arial, Helvetica, sans-serif;
 	width:280px;
 	height:346px;
-	padding:65px 10px 20px;
+	padding:65px 10px 20px 20px;
 	color:#fff;
 	font-size:13px;
 	line-height:25px;
 	font-weight:normal;
-	text-align:center;
+	text-align:left;
 	background:url(../../images/front/banner-bg.png) 0 0 no-repeat;
 	border-radius:0 22px 22px 0;
 	position:absolute;
