Edit css table blue

--- a/css/front/layout.css
+++ b/css/front/layout.css
@@ -59,7 +59,7 @@
 	width:610px;
 }
 .TableBlue {
-	margin:0px;padding:0px;
+	margin:10px 0;padding:0px;
 	width:100%;
 	box-shadow: 7px 7px 5px #888888;
 	border:1px solid #ffffff;
@@ -68,7 +68,7 @@
 }.TableBlue table{
 	width:100%;
 	height:100%;
-	margin:0px;padding:0px;
+	margin:0px ;padding:0px;
 }.TableBlue tr:last-child td:last-child {
 	-moz-border-radius-bottomright:0px;
 	-webkit-border-bottom-right-radius:0px;
