--- a/css/front/style.css
+++ b/css/front/style.css
@@ -227,13 +227,23 @@ height:80px;
 margin-top:50px;
 }
 /***** menu *****/
+.menu:after,
+.menu ul:after {
+  content: '';
+  display: block;
+  clear: both;
+}
 .menu ul {
+        position:absolute;
+        list-style: none;
 	padding:0px 0 10px 0;
 	float:left;
+        z-index: 99;
 }
 .menu ul li {
 	float:left;
 	position:relative;
+        display:inline-block;
 	/*background:url(../../images/front/menu-spacer.gif) left top no-repeat;*/
 }
 .menu ul li:first-child {
@@ -247,18 +257,65 @@ margin-top:50px;
 	padding:5px 15px 10px 15px;
 	color:#fff;
 }
-/*.menu ul li a.active, .menu > ul > li > a:hover {*/
+.menu ul li a.active, .menu > ul > li > a:hover ,
 .menu ul li a:hover, .menu ul li.active a {
-	/*color:#60b001;*/
 	color:#FFE400;
 }
+.menu >ul >li:hover:after{
+  content: '';
+  display: block;
+  width: 0;
+  height: 0;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid #0fa1e0;
+  margin-left: -10px;
+}
+.menu ul li ul a {
+  z-index: 99;
+}
+.menu ul li:hover > ul{
+   display: block;
+}
+.menu ul li ul li{
+  width: 200px;
+  position: relative;
+}
+.menu ul li ul {
+  display: none;
+  position: absolute;
+  width: 200px;
+  top: 100%;
+  left: 0;
+}
 
+.menu ul li ul li {
+  *margin-bottom: -1px;
+}
+.menu ul li ul li a {
+  background: #0fa1e0;
+  border-bottom: 1px dotted #6fc7ec;
+  filter: none;
+  font-size: 13px;
+  display: block;
+  line-height: 120%;
+  padding: 10px;
+}
+.menu ul li ul li:hover a {
+  background: #0c7fb0;
+}
+.menu ul li ul li:hover > ul {
+  display: block;
+}
 /***** slider *****/
 .slider-wrapper {
 	width:850px;
 	height:470px;
 	padding:20px 0 0 130px;
-	margin-top:-90px;
+	margin-top:-94px;
 	position:relative;
 	overflow:hidden;
 	background:url(../../images/front/slider-bg.png) 0 0 no-repeat;
@@ -275,7 +332,7 @@ margin-top:50px;
 	position:absolute;
 	left:30px;
 	top:20px;
-	z-index:99;
+	z-index:10;
 }
 .pagination li {
 	padding-bottom:1px
@@ -332,7 +389,7 @@ margin-top:50px;
 	position:absolute;
 	right:0;
 	top:0;
-	z-index:99;
+	z-index:10;
 }
 .banner .close {
 	display:block;
@@ -344,7 +401,7 @@ margin-top:50px;
 	position:absolute;
 	right:20px;
 	top:20px;
-	z-index:99;
+	z-index:10;
 }
 .banner strong {
 	display:block;
@@ -650,6 +707,11 @@ margin:0 0 30px 0;
 background:url(../../images/front/quotes_bottom.jpg) no-repeat bottom right;
 padding:0 20px 0 0;
 font-style:italic;
+}
+header{
+    overflow: hidden;
+    padding-bottom: 10px;
+    height: auto;
 }
 header form, header fieldset, header legend{margin:0; padding:0; border:none;}
 header legend{display:none;}
