--- a/css/front/style.css
+++ b/css/front/style.css
@@ -376,16 +376,16 @@ margin-top:50px;
 }
 .banner {
         font-family:Tahoma, Arial, Helvetica, sans-serif;
-	width:280px;
+	width:200px;
 	height:346px;
-	padding:65px 10px 20px 20px;
+	padding:65px 10px 20px 10px;
 	color:#fff;
 	font-size:13px;
 	line-height:25px;
 	font-weight:normal;
 	text-align:left;
 	background:url(../../images/front/banner-bg.png) 0 0 no-repeat;
-	border-radius:0 22px 22px 0;
+	/*border-radius:0 22px 22px 0;*/
 	position:absolute;
 	right:0;
 	top:0;
