--- a/themes/shadow_dancer/css/mbmenu.css
+++ b/themes/shadow_dancer/css/mbmenu.css
@@ -233,6 +233,9 @@ ul#navmenu ul ul li.iehover ul {
     display: inline-block;
     float: left;
     margin: 0 0 0 10px;
+        background: url(../images/menu8.gif) 0 -32px no-repeat;
+        padding: 8px 0 0 25px;
+        width:176px;
 }
 .top_menu ul li a{
     text-decoration: none;
