add style for sitemap page

--- a/css/front/style.css
+++ b/css/front/style.css
@@ -825,4 +825,19 @@ ul.pagenav  li.last.hidden
 .pagenav a:hover {
   background: #35AFCE;
 }
+.tree_menu{
+    padding-left: 20px;
+}
+.tree_menu li {
+    padding:0 0 10px 30px;
+    background:url(../../images/front/li_yellow.png) 0 5px no-repeat;
+}
 
+.tree_menu li.submenu {
+    padding:0 0 10px 30px;
+    background:url(../../images/front/list.png) 0 5px no-repeat;
+}
+
+.tree_menu li.submenu ul li {
+   
+}
