css for intro page

--- a/css/front/intro.css
+++ b/css/front/intro.css
@@ -45,6 +45,7 @@ a:hover {
 	width:980px;
 	min-height:470px;
 /*        background: #F9DF1B;*/
+        text-align: center;
         margin: 0 20px 20px 20px;
 	position:relative;
 	overflow:hidden;
