--- a/css/front/style.css
+++ b/css/front/style.css
@@ -32,7 +32,7 @@ body {
 }
 .main {
 	width:980px;
-	padding:10px 0 0 0;
+/*	padding:10px 0 0 0;*/
 	margin:0 auto;
 	font-size:0.875em;
 	line-height:1.428em;
@@ -210,7 +210,7 @@ h1.logo_th {
 	display:block;
 	margin-top: 20px;
 	width:480px;
-	height:135px;
+	height:120px;
 	font-size:44px;
 	font-weight:bold;
 	line-height:2.2em;
@@ -262,7 +262,8 @@ margin-top:50px;
 .menu ul li a {
 	display:inline-block;
         font-family:Tahoma, Arial, Helvetica, sans-serif;
-        font-size:16px;
+/*        font-size:16px;*/
+        font-weight: bold;
 	line-height:1.6em;
 	padding:5px 15px 10px 15px;
 	color:#fff;
@@ -323,9 +324,9 @@ margin-top:50px;
 /***** slider *****/
 .slider-wrapper {
 	width:850px;
-	height:470px;
+	height:400px;
 	padding:20px 0 0 130px;
-	margin-top:-94px;
+	margin-top:-120px;
 	position:relative;
 	overflow:hidden;
 	background:url(../../images/front/slider-bg.png) 0 0 no-repeat;
@@ -387,7 +388,8 @@ margin-top:50px;
 .banner {
         font-family:Tahoma, Arial, Helvetica, sans-serif;
 	width:200px;
-	height:346px;
+/*	height:346px;*/
+        height:275px;
 	padding:65px 10px 20px 10px;
 	color:#fff;
 	font-size:13px;
