--- a/css/front/style.css
+++ b/css/front/style.css
@@ -16,7 +16,8 @@ body {
 	color:#666666;
 	min-width:980px;
 	/*background:#004080;*/
-        background: url('../../images/front/bg.jpg');
+        background:#C63F31;
+        /*background: url('../../images/front/bg.jpg');*/
 }
 .ic, .ic a {
 	border:0;
@@ -53,6 +54,12 @@ a:hover {
 .col-1, .col-2, .col-3, .col-4 {
 	float:left
 }
+.col-1{
+    margin-top: 5px;
+    min-height: 500px;
+    background: url("../../images/front/left_menu_bg.png") no-repeat scroll 0% 0% transparent;
+}
+
 .fcol-1, .fcol-2, .fcol-3 {
 	float:left
 }
@@ -198,7 +205,13 @@ a:hover {
 header {
 	width:100%;
 	min-height:116px;
+        
 }
+/*
+header .main .wrapper {
+	background:url(../../images/front/gspa_logo_en2.png) 0 0 no-repeat;
+        
+}*/
 #page1 header {
 	min-height:180px
 }
@@ -215,7 +228,7 @@ h1.logo_th {
 	font-weight:bold;
 	line-height:2.2em;
 	text-indent:-9999px;
-	background:url(../../images/front/gspa_logo_th.png) 0 0 no-repeat;
+	/*background:url(../../images/front/gspa_logo_en.png) 0 0 no-repeat;*/
 	
 }
 h1.logo_en {
@@ -227,7 +240,7 @@ h1.logo_en {
 	font-weight:bold;
 	line-height:2.2em;
 	text-indent:-9999px;
-	background:url(../../images/front/gspa_logo_en.png) 0 0 no-repeat;
+	/*background:url(../../images/front/gspa_logo_en.png) 0 0 no-repeat;*/
 	
 }
 .logo2{
@@ -237,11 +250,16 @@ height:80px;
 margin-top:50px;
 }
 /***** menu *****/
+
 .menu:after,
 .menu ul:after {
   content: '';
   display: block;
   clear: both;
+}
+.menu ul {
+background: url("../../images/front/menu_bar.png") no-repeat scroll 0% 0% transparent;
+width: 100%;    
 }
 .menu ul {
         position:absolute;
@@ -282,7 +300,7 @@ margin-top:50px;
   bottom: 0;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
-  border-bottom: 10px solid #0fa1e0;
+  border-bottom: 10px solid #DD8277;/*#0fa1e0;*/
   margin-left: -10px;
 }
 .menu ul li ul a {
@@ -307,7 +325,7 @@ margin-top:50px;
   *margin-bottom: -1px;
 }
 .menu ul li ul li a {
-  background: #0fa1e0;
+  background: #DD8277;/*#0fa1e0;*/
   border-bottom: 1px dotted #6fc7ec;
   filter: none;
   font-size: 13px;
@@ -316,7 +334,7 @@ margin-top:50px;
   padding: 10px;
 }
 .menu ul li ul li:hover a {
-  background: #0c7fb0;
+  background: #9B003E; /*#0c7fb0;*/
 }
 .menu ul li ul li:hover > ul {
   display: block;
@@ -793,12 +811,19 @@ header{
 header form, header fieldset, header legend{margin:0; padding:0; border:none;}
 header legend{display:none;}
 header #search{
-        margin-top:45px;
+        margin-top:15px;
         margin-right:5px;
 	display:block;
 	float:right;
 	}
 
+header #lang{
+        margin-top:-30px;
+        margin-right:5px;
+	display:block;
+	float:right;
+	}
+        
 header input{
 	display:block;
 	float:left;
