--- a/css/front/style.css
+++ b/css/front/style.css
@@ -965,26 +965,27 @@ div.form-admission .errorMessage {
     margin-left: 40px;
 }
 .date-event {
-    padding: 5px 10px;
-    border: 1px solid orange;
+    width:60px;
+    height: 58px;
+    background:url(../../images/front/calendar_bg.png) 0 0 no-repeat;
     float: left;
-    border-radius: 5px;
+    overflow: hidden;
 }
 .date-event h5 {
-    color: rgb(0, 102, 255);
+    color: #FFFFFF;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 10px;
     text-align: center;
 }
 
-h5 {
-    font-size: 17px;
-
-    font-weight: normal;
-}
 .date-detile {
-    margin-left: 60px;
-    overflow: hidden;
+    padding: 0;
+    margin-top: 0;
+    margin-left: 70px;
     font-size: 0.85em;
     height: 70px;
+
 }
 ul .footer-list li{
     float:left;
