--- a/css/front/style.css
+++ b/css/front/style.css
@@ -1055,3 +1055,10 @@ img.border-banner{
     -moz-border-radius: 5px;
     border-radius: 5px;
 }
+
+img.border-dean{
+   -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    border: 1px solid #cccccc;
+}
